<resources>
    <string name="app_name">AppLang</string>
    <string name="NotificationServiceDesc">Send notification to learn new languages</string>
    <string name="UpdateWordServiceDesc">Remeber word that are well known by the user.</string>

    <!-- Menu  -->
    <string name="home">Traduire</string>
    <string name="dict">Dictionnaires</string>
    <string name="exo">Exercices</string>
    <string name="info">"Info"</string>

    <!-- TranslateActivity  -->
    <string name="motET">Saisir le mot à traduire</string>
    <string name="dictTW">Dictionnaires :</string>
    <string name="traduireBT">Enregistrer la traduction</string>
    <string name="rechercheBT">Chercher sur Google</string>
    <string name="langSrcTW">Traduire de</string>
    <string name="langDestTW">à </string>

    <!-- DictActivity  -->
    <string name="nomDictTW">Chercher le dictionnaire</string>
    <string name="nomDictET">nom du dictionnaire et un mot à traduire</string>
    <string name="lienDictTW">L\'url:</string>
    <string name="lienDictET">après la recherche l\'url apparaîtra ici</string>
    <string name="choiseTV">Choisissez lang source - lang dest</string>
    <string name="listDictET">Dictionnaires disponibles :</string>
    <string name="trouverBT">Trouver le lien</string>
    <string name="ajouterBT">Ajouter</string>
    <string name="enleverBT">Enlever</string>
    <string name="corrigerBT">Corriger</string>

    <!-- DictEditActivity  -->
    <string name="nameTW">Nom du dictionnaire</string>
    <string name="nameET">nom du dictionnaire</string>
    <string name="linkTW">l\'URL du dictionnaire </string>
    <string name="linkET">l\'URL</string>
    <string name="requestCompositionTW">Pour créer l\'URL universel, convenant à n\'importe quelles langues, completez la fin de l\'url en remplaçant :\nlangue source par <b> $langFrom </b>,\nlangue dest par <b> $langTo </b>,\nphrase / mot par <b> $word </b></string>

    <string name="requestCompositionET">request composition</string>
    <string name="sauvegarderBT">Sauvegarder les modifications</string>

    <!-- ExercisesActivity  -->
    <string name="listMotdTW">Les mots disponibles pour exercises</string>
    <string name="nettoyerListBN">Nettoyer la liste</string>
    <string name="enleverMotBT">Enlever le mot sélectionné</string>
    <string name="parametrageTW">Paramétrage d\'entraînement</string>
    <string name="appliquerBN">Appliquer</string>
    <string name="reinitBN">Réinitialiser</string>

    <string name="nbMotsTW">"Quantité (nb de mots proposé) :"</string>
    <string name="frequenseTW">Fréquence (nb de fois par jour) :</string>
    <string name="lundiTW">Lundi :</string>
    <string name="mardiTW">Mardi :</string>
    <string name="mercrediTW">Mercredi :</string>
    <string name="jeudiTW">Jeudi :</string>
    <string name="vendrediTW">Vendredi :</string>
    <string name="samediTW">Samedi :</string>
    <string name="dimancheTW">Dimanche :</string>
    <string name="choiseJourLangTV">Choisissez pour chaques jours quelle langue voulez-vous apprendre :</string>

    <!-- InfoActivity  -->
    <string name="readmeTW">    <b>AppLang</b> est destinée à ceux qui apprennent des langues étrangères et qui souhaitent s\'entraîner quotidiennement en mémorisant de nouveaux mots. \n    AppLang vous permettra de : </string>
    <string name="translInfoTW"> - créer votre propre liste de mots à retenir</string>
    <string name="exersInfoTW"> - créer un planning d\'entrainement, ainsi que de gérer la liste des mots à retenir</string>
    <string name="dictInfoTW"> - gérer les dictionnaires que vous utilisez et en chercher de nouveaux</string>
    <string name="restInfo1TW">Une fois que vous aurez ajouter des mots a retenir, l\'application vous enverra ces mots sous forme de notifications.
        Si vous connaissez la traduction du mot validez le en fermant la notification.
        Sinon cliquez sur la notification pour accéder a la pages de traduction afin de le réapprendre.
        Les mots qui vous seront proposez seront toujours ceux ce vous avez le moins validé.
    </string>


    <string name="message1">"Vous pouvez utiliser les dictionnaires déjà disponibles. Pour le faire :
        - entrez le mot dans champ de recherche,
        - sélectionnez un dictionnaire et des langues,
        - cliquez sur «Enregistrer la traduction».
        \nOu bien vous pouvez trouver un nouveau lien. Pour le faire :
        - entrez le mot dans champ de recherche,
        - sélectionnez les langues,
        - cliquez sur «Chercher sur Google»,
        - puis faites «Partager» et sélectionnez AppLang"</string>

    <string name="message2">"
        Pour trouver un nouveau dictionnaire, assurez-vous d'écrire non seulement son nom, mais aussi un mot que vous souhaiteriez traduire à l'aide de ce dictionnaire.
        Il est important que après le «Partager» l'application reçoive un lien vers la traduction d'un mot. Ainsi, le lien sera créé correctement.
        Si nécessaire, il est toujours possible de modifier les champs du dictionnaire : son nom, son lien, etc en suivant les consignes."</string>

    <string name="message3">"
        Ici vous pouvez définir la fréquence des notifications, le nombre de mots par jour pour l\'entraînement, ainsi que créer l\'agenda détaillé
        Une fois que vous aurez créé une liste des mots et un planning d'entraînement, vous commencerez à recevoir les notifications.
        Si vous connaissez la traduction du mot, rejetez la notification. Ce mot sera remplacé par un autre ultérieurement.
        Si vous ne vous souvenez pas de la traduction de ce mot, cliquez sur la notification et vous serez redirigé vers la page de sa traduction.

        "</string>

    <!-- Notification -->
    <string name="translate">Traduisez</string>

    <!-- List of languages  -->
    <string name="languageList">"""fr,Français
en,English
eo,Esperanto
af,Afrikaans
am,አማርኛ
ar,العربية
az,Azərbaycan dili
be,Беларуская мова
bg,Български език
bn,বাংলা
bs,Bosanski jezik
ca,Català
co,Corsu ; lingua corsa
cs,Česky ; čeština
cy,Cymraeg
da,Dansk
de,Deutsch
el,Ελληνικά
es,Español; castellano
et,Eesti keel
eu,Euskara
fa,فارسی
fi,Suomen kieli
frp,Arpetan
fy,Frysk
ga,Gaeilge
gd,Gàidhlig
gl,Galego
ha,هَوُسَ
he,עברית
hi,हिन्दी ; हिंदी
hr,Hrvatski
ht,Kreyòl ayisyen
hu,Magyar
hy,Հայերեն
id,Bahasa Indonesia
ig,Igbo
is,Íslenska
it,Italiano
ja,日本語 (にほんご)
ka,ქართული
kk,Қазақ тілі
km,ភាសាខ្មែរ
kn,ಕನ್ನಡ
ko,한국어 (韓國語) ; 조선말 (朝鮮語)
ku,Kurdî ; كوردی
ky,Кыргыз тили
la,Latine ; lingua latina
lb,Lëtzebuergesch
lo,ພາສາລາວ
lt,Lietuvių kalba
lv,Latviešu valoda
mg,Fiteny malagasy
mi,Te reo Māori
mk,Македонски јазик
ml,മലയാളം
mn,Монгол
mr,मराठी
ms,Bahasa Melayu ; بهاس ملايو
mt,Malti
my,ဗမာစာ
nb,Norsk bokmål
ne,नेपाली
nl,Nederlands
nn,Norsk nynorsk
no,Norsk
ny,ChiCheŵa ; chinyanja
oc,Occitan
or,ଓଡ଼ିଆ
pa,ਪੰਜਾਬੀ ; پنجابی
pl,Polski
ps,پښتو
pt,Português
ro,Română
ru,Русский язык
rw,Kinyarwanda
sd,सिन्धी ; سنڌي، سندھی
si,සිංහල
sk,Slovenčina
sl,Slovenščina
sm,Gagana fa'a Samoa
sn,ChiShona
so,Soomaaliga ; af Soomaali
sq,Shqip
sr,Српски језик
st,SeSotho
su,Basa Sunda
sv,Svenska
sw,Kiswahili
ta,தமிழ்
te,తెలుగు
tg,Тоҷикӣ ; toğikī ; تاجیکی
th,ไทย
tk,Türkmen ; Түркмен
tl,Tagalog
tr,Türkçe
tt,Татарча ; tatarça ; تاتارچا
ug,Uyƣurqə ; ئۇيغۇرچ
uk,Українська мова
ur,اردو
uz,O'zbek ; Ўзбек ; أۇزبېك
vi,Tiếng Việt
xh,IsiXhosa
yi,ייִדיש
yo,Yorùbá
zh,"中文, 汉语, 漢語"
zu,IsiZulu"""
</string>
</resources>