<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/goMainActivity"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_translate_foreground"/>

    <item
        android:id="@+id/goDictActivity"
        android:title="@string/dict"
        app:showAsAction="always"
        android:icon="@drawable/ic_dictionary_foreground"/>

    <item
        android:id="@+id/goExersActivity"
        android:title="@string/exo"
        app:showAsAction="always"
        android:icon="@drawable/ic_exercices_foreground"/>

    <item
        android:id="@+id/goSettingsActivity"
        android:title="@string/info"
        app:showAsAction="always"
        android:icon="@drawable/ic_info_foreground"/>
</menu>