<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="DictActivity"
    android:orientation="vertical">
    <include
        layout="@layout/menu_layout"/>

    <LinearLayout
        android:id="@+id/ajout_dict_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nomDictTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/purple_700"
            android:layout_marginTop="10dp"
            android:text="@string/nomDictTW" />

        <EditText
            android:id="@+id/nomDictET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:hint="@string/nomDictET"
            android:textSize="@dimen/commentsSize" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/textSize"
            android:text="@string/lienDictTW" />

        <EditText
            android:id="@+id/lienDictET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:hint="@string/lienDictET"
            android:textSize="@dimen/commentsSize" />

        <TextView
            android:id="@+id/choiseTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/purple_700"
            android:layout_marginTop="10dp"
            android:text="@string/choiseTV" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/langSrcSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:layout_alignParentTop="false"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/textSize"
                android:background="@color/white"
                />

            <Spinner
                android:id="@+id/langDestSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:layout_alignParentTop="false"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/textSize"
                android:background="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_dict_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/ajout_dictBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="2dp"
                android:onClick="ajouterDict"
                android:text="@string/ajouterBT" />
            <Button
                android:id="@+id/chercher_dictBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:onClick="chercherDict"
                android:text="@string/trouverBT" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_dict_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@color/lil"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/listDictET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/textSize"
            android:textColor="@color/purple_700"
            android:text="@string/listDictET" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="7dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/corrigerET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp"
                android:onClick="corrigerDict"
                android:text="@string/corrigerBT" />

            <Button
                android:id="@+id/deleteET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="2dp"
                android:onClick="enleverDict"
                android:text="@string/enleverBT" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>