<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/beige"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="TranslateActivity"
    android:orientation="vertical">

    <include
        layout="@layout/menu_layout"/>

    <LinearLayout

        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/motET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:background="@color/white"
            android:hint="@string/motET"
            android:minHeight="48dp"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/dictTW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/textSize"
            android:textColor="@color/black"
            android:text="@string/dictTW"/>

        <Spinner
            android:id="@+id/dictSP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/textSize"
            android:background="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/textSize"
            android:textColor="@color/black"
            android:text="@string/langSrcTW"/>

        <Spinner
            android:id="@+id/lang_srcSP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/textSize"
            android:background="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/textSize"
            android:textColor="@color/black"
            android:text="@string/langDestTW"/>

        <Spinner
            android:id="@+id/lang_destSP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/textSize"
            android:background="@color/white"
            />

        <Button
            android:id="@+id/traduireBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:onClick="traduire"
            android:text="@string/traduireBT" />

        <Button
            android:id="@+id/rechercheBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:onClick="chercher"
            android:text="@string/rechercheBT" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>