<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/beige"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="TranslateActivity"
    android:orientation="vertical">

    <include
        layout="@layout/menu_layout"/>

    <LinearLayout

        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:hint="@string/nameET"
            android:textSize="@dimen/textSize"
            android:background="@color/white"
            />

        <EditText
            android:id="@+id/linkET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:hint="@string/linkET"
            android:textSize="@dimen/textSize"
            android:background="@color/white"
            />

        <EditText
            android:id="@+id/requestCompositionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:hint="@string/requestCompositionET"
            android:textSize="@dimen/textSize"
            android:background="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/langSrcSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:layout_alignParentTop="false"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/textSize"
                android:background="@color/white"
                />

            <Spinner
                android:id="@+id/langDestSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:layout_alignParentTop="false"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/textSize"
                android:background="@color/white"
                />

        </LinearLayout>

        <Button
            android:id="@+id/sauvegarderBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:onClick="sauvegarder"
            android:text="@string/sauvegarderBT" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>